--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
@@ -168,6 +168,9 @@
 													</m:Column>
 													<m:Column id="DOWNLOAD" minScreenWidth="Desktop" demandPopin="true">
 													</m:Column>
+													<m:Column id="LABNR" visible="{columnVisibilityModel>/LABNR}" minScreenWidth="Desktop" demandPopin="true">
+														<m:Label text="{i18n>LABNR}" class="columnLabelStyle" wrapping="true"/>
+													</m:Column>
 												</m:columns>
 												<m:items>
 													<m:ColumnListItem type="Navigation" highlight="{path:'OrderJSONModel>STATUS', formatter:'.onSetSchedulationStatus'}">
@@ -190,6 +193,7 @@
 															<m:Text text="{path : 'OrderJSONModel>SECONDO_PERIODO', formatter : '.importFormatter'}"/>
 															<m:Button icon="sap-icon://document-text" press="onGetTexts"/>
 															<m:Button icon="sap-icon://download" press="onItemDownload"/>
+															<m:Text text="{OrderJSONModel>LABNR}"/>
 														</m:cells>
 													</m:ColumnListItem>
 												</m:items>
