--- a/AUPSUP_HTML5_CONTRACTS/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/view/Worklist.view.xml
@@ -161,6 +161,9 @@
 													<m:Column id="SECONDO_PERIODO" visible="{columnVisibilityModel>/SECONDO_PERIODO}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>SECONDO_PERIODO}" class="columnLabelStyle" wrapping="true"/>
 													</m:Column>
+													<m:Column id="LABNR" visible="{columnVisibilityModel>/LABNR}" minScreenWidth="Desktop" demandPopin="true">
+														<m:Label text="{i18n>LABNR}" class="columnLabelStyle" wrapping="true"/>
+													</m:Column>														
 													<m:Column id="TESTS" minScreenWidth="Desktop" demandPopin="true">
 													</m:Column>
 													<m:Column id="DOWNLOAD" minScreenWidth="Desktop" demandPopin="true">
@@ -184,6 +187,7 @@
 															<m:Text text="{ path: 'OrderJSONModel>EKET_EKEH_EINDT', type: 'it.aupsup.contracts.type.Date' }"/>
 															<m:Text text="{path : 'OrderJSONModel>PRIMO_PERIODO', formatter : '.importFormatter'}"  visible="{= ${OrderJSONModel>PRIMO_PERIODO} !== '100'}"/>
 															<m:Text text="{path : 'OrderJSONModel>SECONDO_PERIODO', formatter : '.importFormatter'}"/>
+															<m:Text text="{OrderJSONModel>LABNR}"/>
 															<m:Button icon="sap-icon://document-text" press="onGetTexts"/>
 															<m:Button icon="sap-icon://download" press="onItemDownload"/>
 														</m:cells>
