--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
@@ -169,6 +169,8 @@
 													</m:Column>													
 													<m:Column id="TESTS" minScreenWidth="Desktop" demandPopin="true">
 													</m:Column>
+													<m:Column id="PRINT" minScreenWidth="Desktop" demandPopin="true">
+													</m:Column>
 													<m:Column id="DOWNLOAD" minScreenWidth="Desktop" demandPopin="true">
 													</m:Column>
 
@@ -194,6 +196,7 @@
 															<m:Text text="{path : 'OrderJSONModel>SECONDO_PERIODO', formatter : '.importFormatter'}"/>
 															<m:Text text="{OrderJSONModel>LABNR}"/>
 															<m:Button icon="sap-icon://document-text" press="onGetTexts"/>
+															<m:Button icon="sap-icon://print" press="onPrintPDFOrder"/>
 															<m:Button icon="sap-icon://download" press="onItemDownload"/>
 															
 														</m:cells>
