--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
@@ -196,7 +196,7 @@
 															<m:Text text="{path : 'OrderJSONModel>SECONDO_PERIODO', formatter : '.importFormatter'}"/>
 															<m:Text text="{OrderJSONModel>LABNR}"/>
 															<m:Button icon="sap-icon://document-text" press="onGetTexts"/>
-															<m:Button icon="sap-icon://print" press="onPrintPDFOrder"/>
+															<m:Button icon="sap-icon://print" press="onPrintPDFOrder" visible="{OrderJSONModel>PRINT}"/>
 															<m:Button icon="sap-icon://download" press="onItemDownload"/>
 															
 														</m:cells>
