--- a/AUPSUP_HTML5_CONTO_LAV/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_CONTO_LAV/webapp/view/Worklist.view.xml
@@ -1,6 +1,14 @@
-<mvc:View controllerName="it.aupsup.conto_lav.controller.Worklist" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.uxap" xmlns:layout="sap.ui.layout"
-	xmlns:m="sap.m" xmlns:table="sap.ui.table" xmlns:core="sap.ui.core" xmlns:personal="sap.uxap.sample.SharedBlocks.personal"
-	xmlns:form="sap.ui.layout.form" xmlns:fb="sap.ui.comp.filterbar" xmlns:sts="sap.ui.table.TreeTable">
+<mvc:View controllerName="it.aupsup.conto_lav.controller.Worklist" 
+xmlns:mvc="sap.ui.core.mvc" 
+xmlns="sap.uxap" 
+xmlns:layout="sap.ui.layout"
+xmlns:m="sap.m" 
+xmlns:table="sap.ui.table" 
+xmlns:core="sap.ui.core" 
+xmlns:personal="sap.uxap.sample.SharedBlocks.personal"
+xmlns:form="sap.ui.layout.form" 
+xmlns:fb="sap.ui.comp.filterbar" 
+xmlns:sts="sap.ui.table.TreeTable">
 	<m:Shell id="shell" appWidthLimited="false">
 		<m:App id="app">
 			<m:pages>
@@ -29,7 +37,7 @@
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
-										<fb:FilterItem name="Lifnr" label="{i18n>supplier}"
+										<fb:FilterItem name="Lifnr" label="{i18n>LIFNR}"
 											visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
 												<m:MultiComboBox selectionChange="onChangeMetalifnr" showSecondaryValues="true"
@@ -70,9 +78,19 @@
 									<subSections>
 										<ObjectPageSubSection >
 										
-										<table:TreeTable id="TreeTableBasic" selectionMode="Single" expandFirstLevel="false"
+										<table:TreeTable id="TreeTableBasic" selectionMode="Single" expandFirstLevel="false" visibleRowCount="20"
 											rows="{path:'DocumentsJSONModel>/results', parameters: {arrayNames:['riga']}}"
 											ariaLabelledBy="title">
+											<table:extension>
+												<m:OverflowToolbar style="Clear">
+													<m:Title id="title" text="Clothing"/>
+													<m:ToolbarSpacer/>
+													<m:Button text="Collapse all" press="onCollapseAll"/>
+													<m:Button text="Expand all" press="onExpandAll"/>
+													<m:Button icon="sap-icon://legend" press="onLegend" tooltip="{i18n>Legend}"/>
+													<m:Button icon="sap-icon://excel-attachment" press="onExport" tooltip="{i18n>Export_Excel}"/>
+												</m:OverflowToolbar>
+											</table:extension>
 											<table:rowSettingsTemplate>
 												<table:RowSettings highlight="{DocumentsJSONModel>SEMA}"/>
 											</table:rowSettingsTemplate>
@@ -90,31 +108,31 @@
 														</table:template>
 													</table:Column>
 													<table:Column width="13rem">
-														<m:Label text="{i18n>supplierDescr}"/>
+														<m:Label text="{i18n>NAME_LIFNR}"/>
 														<table:template>
 															<m:Text text="{DocumentsJSONModel>NAME_LIFNR}" wrapping="false"/>
 														</table:template>
 													</table:Column>
 													<table:Column width="13rem">
-														<m:Label text="{i18n>TXZ01}"/>
+														<m:Label text="{i18n>WERKS}"/>
 														<table:template>
 															<m:Text text="{DocumentsJSONModel>WERKS}" wrapping="false"/>
 														</table:template>
 													</table:Column>
 													<table:Column width="13rem">
-														<m:Label text="{i18n>WERKS_DESCR}"/>
+														<m:Label text="{i18n>PLANT_DESCR}"/>
 														<table:template>
 															<m:Text text="{DocumentsJSONModel>WERKS_DESCR}" wrapping="false"/>
 														</table:template>
 													</table:Column>
 													<table:Column width="13rem">
-														<m:Label text="{i18n>materialCode}"/>
+														<m:Label text="{i18n>MATNR}"/>
 														<table:template>
 															<m:Text text="{DocumentsJSONModel>MATNR}" wrapping="false"/>
 														</table:template>
 													</table:Column>
 													<table:Column width="13rem">
-														<m:Label text="{i18n>materialDescr}"/>
+														<m:Label text="{i18n>DESC_MATNR}"/>
 														<table:template>
 															<m:Text text="{DocumentsJSONModel>DESC_MATNR}" wrapping="false"/>
 														</table:template>
@@ -134,19 +152,25 @@
 													<table:Column width="9rem">
 														<m:Label text="{i18n>LBINS}"/>
 														<table:template>
-															<m:Text text="{DocumentsJSONModel>LBINS}" wrapping="false"/>
+															<m:Text text="{path : 'DocumentsJSONModel>LBINS', formatter: '.importFormatter'}" wrapping="false"/>
 														</table:template>
 													</table:Column>
 													<table:Column width="9rem">
 														<m:Label text="{i18n>LBLAB}"/>
 														<table:template>
-															<m:Text text="{DocumentsJSONModel>LBLAB}" wrapping="false"/>
+															<m:Text text="{path : 'DocumentsJSONModel>LBLAB', formatter: '.importFormatter'}" wrapping="false"/>
 														</table:template>
 													</table:Column>
 													<table:Column width="9rem">
 														<m:Label text="{i18n>TOT_GIAC}"/>
 														<table:template>
-															<m:Text text="{DocumentsJSONModel>TOT_GIAC}" wrapping="false"/>
+															<m:Text text="{path : 'DocumentsJSONModel>TOT_GIAC', formatter: '.importFormatter'}" wrapping="false"/>
+														</table:template>
+													</table:Column>
+													<table:Column width="9rem">
+														<m:Label text="{i18n>MEINS}"/>
+														<table:template>
+															<m:Text text="{DocumentsJSONModel>MEINS}" wrapping="false"/>
 														</table:template>
 													</table:Column>
 													<table:Column width="9rem">
@@ -164,7 +188,7 @@
 													<table:Column width="9rem">
 														<m:Label text="{i18n>FIRST}"/>
 														<table:template>
-															<m:Text text="{DocumentsJSONModel>FIRST}" wrapping="false"/>
+															<m:Text text="{ path: 'DocumentsJSONModel>FIRST', type: 'it.aupsup.conto_lav.type.Date' }" wrapping="false"/>
 														</table:template>
 													</table:Column>
 												</table:columns>
